--- a/client/src/styles/TweetModal.css
+++ b/client/src/styles/TweetModal.css
@@ -14,7 +14,7 @@
 .tweet-modal header {
     width: 100%;
     align-items: flex-start;
-    padding: 1rem;
+    padding: 1rem 1.2rem;
     border: 0 !important;
 }
 
@@ -30,7 +30,7 @@
 
 .tweet-modal .tweet-input {
     width: 100%;
-    padding: 0.5rem 1rem;
+    padding: 0 1rem 0.5rem 1rem;
 }
 
 .tweet-modal .tweet-input_container {
