--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -28,6 +28,8 @@
     --primary-hover: rgb(26, 140, 216);
     --tweet-hover: rgba(255, 255, 255, 0.03);
 
+    --widget-background: #16181c;
+
     --input-placeholder: #71767b;
 
     --border: rgb(47, 51, 54);
@@ -103,6 +105,7 @@ input:-webkit-autofill:active {
     transition: background-color 5000s ease-in-out 0s;
     -webkit-text-fill-color: #fff !important;
 }
+
 input::-webkit-input-placeholder {
     color: var(--grey);
 }
@@ -146,7 +149,7 @@ select {
 
 .container main {
     display: flex;
-    gap: 2.5rem !important;
+    gap: 2rem !important;
 }
 
 /* FIRST COLUMN: Sidebar */
@@ -352,8 +355,8 @@ select {
 
 .header-btn_icon {
     position: block;
-    width: 23px !important;
-    height: 23px;
+    width: 20px !important;
+    height: 20px;
     stroke-width: 0px;
 }
 
@@ -368,6 +371,10 @@ img.pfp {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.tab-route-header {
+    border-bottom: 0 !important;
 }
 
 /* THIRD COLUMN: Widgets */
@@ -658,26 +665,29 @@ img.pfp {
 
 /* Placeholder styles */
 
-.basic-placeholder {
+.placeholder {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 250px;
+    /* width: 90%; */
 }
 
-.missing-header {
+.placeholder-text__heading {
     font-size: 2rem;
     font-weight: 800;
     text-align: center;
     margin-bottom: 0.3rem;
+    width: 90%;
 }
 
-.missing-description {
+.placeholder-text__subheading {
     color: var(--grey);
     font-size: 1.5rem;
     font-weight: 500;
     text-align: center;
+    width: 90%;
 }
 
 /* Utils */
