--- a/client/src/styles/TweetForm.css
+++ b/client/src/styles/TweetForm.css
@@ -10,6 +10,7 @@
 }
 
 .tweet-form .pfp-container {
+    align-items: flex-start;
     padding-top: 0.5rem;
     margin-right: 0.75rem !important;
 }
@@ -17,7 +18,6 @@
 .tweet-form .pfp-container .pfp {
     width: 40px;
     height: 40px;
-    border-radius: 50%;
 }
 
 .tweet-input {
