--- a/client/src/styles/TweetForm.css
+++ b/client/src/styles/TweetForm.css
@@ -5,7 +5,7 @@
 }
 
 .tweet-form.force-expand {
-    min-height: 100%;
+    /* min-height: 100%; */
     flex-grow: 1;
 }
 
@@ -52,7 +52,7 @@
     padding-top: 1rem;
 }
 
-.media-preview .dark-round-btn {
+.media-preview .media-preview_close {
     position: absolute;
     right: 8px;
     top: 20px;
