--- a/client/src/styles/TweetModal.css
+++ b/client/src/styles/TweetModal.css
@@ -1,10 +1,11 @@
-.tweet-modal .modal-content {
+.tweet-modal .modal-content_wrapper {
     position: absolute !important;
     top: 45px;
-    height: auto;
-    max-height: 800px !important;
+    height: 800px !important;
+}
+
+.tweet-modal .modal-content {
     padding: 0 !important;
-    overflow-y: auto;
 }
 
 .tweet-modal .modal-content .quote-preview {
