minor changes to 404 page

--- a/client/src/routes/NotFound/styles.css
+++ b/client/src/routes/NotFound/styles.css
@@ -1,4 +1,4 @@
-#not-found .container {
+#not-found .app-container {
     min-height: 100vh;
     display: flex !important;
     flex-direction: column;
