--- a/client/src/components/ui/TweetActions/styles.css
+++ b/client/src/components/ui/TweetActions/styles.css
@@ -1,67 +1,61 @@
-.tweet-actions {
-    width: 100%;
+.tweet .tweet-actions {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    /* padding: 0.75rem 0; */
-    margin: 0;
+    margin-top: 0.75rem !important;
 }
 
-.tweet-actions .attachments {
+.tweet-actions-container {
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    margin-left: -6px;
-}
-
-.tweet-attachments_icon {
-    color: var(--primary-colour);
-}
-
-.tweet-attachments_button {
-    cursor: pointer;
-    /* padding: 0.5rem; */
-    width: 33px;
-    height: 33px;
-    /* border-radius: 50%; */
-    /* margin-right: 0.4rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: background-color 0.1s linear; */
-}
-/* 
-.tweet-attachments_button:hover {
-    background-color: rgba(29, 155, 240, 0.2);
-} */
-
-.tweet-attachments_button .icon-container {
-    width: 18px;
-    height: 18px;
-}
-
-.tweet-attachments_button .tweet-attachments_icon {
-    color: var(--primary-colour);
-}
-
-.tweet-attachments_button:disabled:hover .icon-container::after {
-    background-color: rgba(29, 155, 240, 0.1);
-}
-
-.tweet-attachments_button:disabled .tweet-attachments_icon {
-    opacity: 0.5;
-}
-
-.tweet-submit {
-    display: flex;
-    justify-content: center;
     align-items: center;
 }
 
-.tweet-submit .separator {
-    height: 25px;
-    width: 2px;
-    background-color: rgb(62, 65, 68);
-    border-radius: 99999rem;
-    margin: 0 0.7rem;
+.tweet-actions-container .bookmark .icon-container {
+    margin-right: 1rem;
+    stroke-width: 0 !important;
+}
+
+.tweet-actions-container .bookmark .icon-container .icon {
+    font-size: 0.5rem !important;
+    stroke-width: unset !important;
+}
+
+.tweet-actions .tweet-btn .float-options {
+    bottom: -50px !important;
+    left: -10px !important;
+    width: 200px;
+}
+
+.action-btn .count-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+}
+
+.action-btn .count-container span {
+    padding: 0 0.75rem;
+}
+
+.reply.applied .icon,
+.reply.applied span,
+.reply:hover span {
+    color: var(--primary-colour) !important;
+}
+
+.retweet.applied .icon,
+.retweet.applied span,
+.retweet:hover span {
+    color: var(--retweet) !important;
+}
+
+.like.applied .icon,
+.like.applied span,
+.like:hover span {
+    color: var(--like) !important;
+}
+
+.action-btn .count-container {
+    font-size: 0.8rem;
+    font-weight: 500;
+    color: var(--grey);
 }
