--- a/client/src/components/ui/TweetPreview/styles.css
+++ b/client/src/components/ui/TweetPreview/styles.css
@@ -1,5 +1,6 @@
 .tweet {
     display: flex;
+    position: relative;
     /* padding: 0.75rem 1rem; */
     padding: 0.65rem 1rem;
     border-top: 1px solid var(--border);
@@ -8,17 +9,22 @@
     cursor: pointer;
 }
 
+.tweet .tweet-actions .action-btn .icon-container {
+    width: 17px;
+    height: 17px;
+}
+
 .tweet:hover {
     background-color: var(--tweet-hover);
 }
 
 .tweet .pfp-container {
-    padding: 0.3rem 0.75rem 0 0;
+    padding: 0rem 0.75rem 0 0;
 }
 
 .tweet .pfp-container .pfp {
-    width: 45px;
-    height: 45px;
+    width: 40px;
+    height: 40px;
 }
 
 .tweet .tweet-container {
@@ -59,27 +65,6 @@
     border-radius: 1rem;
 }
 
-.tweet .tweet-actions {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 0.75rem !important;
-}
-
-.tweet-actions-container {
-    display: flex;
-    align-items: center;
-}
-
-.tweet-actions-container .bookmark .icon-container {
-    margin-right: 1rem;
-    stroke-width: unset !important;
-}
-
-.tweet-actions-container .bookmark .icon-container .tweet_icon {
-    font-size: 0.5rem !important;
-    stroke-width: unset !important;
-}
-
 .tweet-btn {
     position: relative;
     display: flex;
@@ -97,12 +82,6 @@
     justify-content: center;
     align-items: center;
     width: 30px;
-}
-
-.tweet-actions .tweet-btn .float-options {
-    bottom: -50px !important;
-    left: -10px !important;
-    width: 200px;
 }
 
 .tweet-btn .count-container span {
@@ -173,51 +152,6 @@
     color: red;
 }
 
-.tweet-btn.more .more .tweet-btn .tweet_icon {
-    color: var(--grey);
-    transition: all 0.2s ease-out;
-}
-
-.tweet-btn.retweet:hover .icon-container::after {
-    background-color: rgba(0, 186, 124, 0.2);
-}
-
-.tweet-btn.retweet:hover .tweet_icon {
-    color: var(--retweet);
-}
-
-.tweet-btn.retweet:hover {
-    color: var(--retweet);
-}
-
-.tweet-btn.like:hover .icon-container::after {
-    background-color: rgba(249, 24, 128, 0.2);
-}
-
-.tweet-btn.like:hover .tweet_icon {
-    color: var(--like);
-}
-
-.tweet-btn.like:hover {
-    color: var(--like);
-}
-
-.tweet-btn.comment:hover,
-.tweet-btn.share:hover,
-.tweet-btn.bookmark:hover,
-.tweet-btn.more:hover,
-.tweet-btn.view:hover {
-    color: var(--primary-colour);
-}
-
-.tweet-btn.comment:hover .tweet_icon,
-.tweet-btn.share:hover .tweet_icon,
-.tweet-btn.bookmark:hover .tweet_icon,
-.tweet-btn.more:hover .tweet_icon,
-.tweet-btn.view:hover .tweet_icon {
-    color: var(--primary-colour);
-}
-
 .tweet-btn .icon-container::after {
     content: "";
     position: absolute;
@@ -225,14 +159,6 @@
     height: 30px;
     border-radius: 99999rem;
     transition: all 0.2s ease-out;
-}
-
-.tweet-btn.comment:hover .icon-container::after,
-.tweet-btn.share:hover .icon-container::after,
-.tweet-btn.bookmark:hover .icon-container::after,
-.tweet-btn.more:hover .icon-container::after,
-.tweet-btn.view:hover .icon-container::after {
-    background-color: rgba(29, 155, 240, 0.1);
 }
 
 .float-icon-container {
