--- a/client/src/components/ui/FloatOptions/styles.css
+++ b/client/src/components/ui/FloatOptions/styles.css
@@ -4,17 +4,25 @@
     height: auto;
     width: 250px;
     position: absolute;
-    z-index: 99999;
-    /* right: 0;
-    top: 0; */
+    z-index: 9999999999;
     display: flex;
     flex-direction: column;
     justify-content: center;
     background-color: #000;
     border-radius: 1rem;
-    box-shadow: rgba(255, 255, 255, 0.2) 0px 0px 15px, rgba(255, 255, 255, 0.15) 0px 0px 3px 1px;
-    /* padding: 0.75rem 0; */
+    box-shadow: rgba(255, 255, 255, 0.2) 0px 0px 15px,
+        rgba(255, 255, 255, 0.15) 0px 0px 3px 1px;
     overflow: hidden;
+}
+
+.float-options::before {
+    content: "";
+    position: fixed;
+    z-index: -11111;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
 }
 
 .float-options .float-btn {
