--- a/client/src/components/modals/SignupModal/styles.css
+++ b/client/src/components/modals/SignupModal/styles.css
@@ -1,17 +1,32 @@
+.signup-modal .modal-content {
+    padding: 1rem 1.5rem;
+    height: 650px;
+}
+
 .signup-modal_header {
     width: 80%;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     padding-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.signup-modal_header h2 {
+    font-size: 2rem;
+    margin-bottom: 0;
+}
+
+.signup-modal_form-header {
+    margin-bottom: 1.5rem;
 }
 
 .signup-modal_header h3 {
     font-weight: 700;
-    margin-left: 1.6rem;
+    margin-left: 1rem;
 }
 
-.signup-modal_content {
+.signup-modal_form {
     height: 85%;
     width: 80%;
     padding: 0.5rem 0.5rem;
@@ -20,7 +35,7 @@
     justify-content: space-around;
 }
 
-.signup-modal_content .page {
+.signup-modal_form .page {
     padding: 1rem 0;
     height: 100%;
     display: flex;
@@ -28,7 +43,7 @@
     justify-content: space-between;
 }
 
-.signup-modal_content h2 {
+.signup-modal_form h2 {
     font-size: 1.75rem;
 }
 
@@ -48,11 +63,9 @@
 
 .btn-close_icon {
     position: block;
-
-    /* margin-right: 2rem; */
 }
 
-.input-container {
+.input-wrapper {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -81,11 +94,17 @@
     margin: 1rem 0 0.6rem 0;
 }
 
-.signup-modal_content p {
+.signup-modal_form p {
     font-size: 0.85rem;
     font-weight: 500;
     color: var(--grey);
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
+}
+
+.signup-modal_form .signup-modal_input-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .select-container .month-select {
